styles.css
html {
    background-image: url("./images/md-background.jpeg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    overscroll-behavior: none;
}

/* Reset default styles */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    line-height: 1.8;
}

h1 {
    margin-bottom: 0px;
}
h4 {
    margin: 0px;
}

#preface {
    display: flex;
    gap: 5rem;
}

/* Container styling for layout */
#main-container {
    width: 80%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;

    background-color: rgba(255, 255, 255, 0.9);
}

.vis svg {
    margin: 0;
    border: 1px solid #ccc; /*otherwise you can't see this part*/
    background-color: white;
}

.vis {
    display: flex;
    justify-content: center;
}

.titles {
    font-size: 1.25rem;
}

.grid-layout {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
    max-width: auto;
    margin: 0 auto;
}

.container {
    width: 100%;
    padding: 10px 20px;
}

.brush .selection {
    fill: steelblue;
    fill-opacity: 0.2;
    stroke: #333;
}

#written-responses {
    width: 90%;

    legend {
        font-weight: bold;
    }
}

